# pynetcat

./: .gitignore  README.md  pynetcat.py  pyproject.toml
src/pynetcat/: __init__.py  example.py
