[project]
name = "pynetcat"
version = "0.0.1"
authors = [
  { name="rai68", email="1234561567b@gmail.com" },
]
description = "A python based netcat utility with shell emulation for windows"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rai68/pynetcat"
Issues = "https://github.com/rai68/pynetcat/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"